--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@
     padding: 0;
     font-size: 16px;
     line-height: 1.5rem;
-    
 }
 
 
@@ -82,6 +81,7 @@ input[type=submit]:active{
     flex-direction: row;
     margin-bottom: 1rem;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 1rem;
 }
 
 
@@ -90,6 +90,10 @@ input[type=submit]:active{
     flex-shrink: 1.5;
     transition: all 0.3s ease-in-out;
     font-family: 'Archivo Black', sans-serif;
+
+    height: 5rem;
+    width: 100%;
+    background-color: orange;
     
     display: flex;
     flex-direction: column;
@@ -104,11 +108,13 @@ input[type=submit]:active{
     font-size: 1rem;
 }
 
-.color{
-    height: 5rem;
-    width: 100%;
-    background-color: orange;
+.palette-color:first-child{
+    border-radius: 1rem 0 0 1rem;
 }
+.palette-color:last-child{
+    border-radius: 0 1rem 1rem 0;
+}
+
 
 .primary-color{
     height: 17rem;
